[Fix] Dark mode

--- a/app/components/common/darkmode/darkmode.scss
+++ b/app/components/common/darkmode/darkmode.scss
@@ -61,4 +61,8 @@
 		background-color: darkslategray;
 		background-image: none;
 	}
+
+	.hero.is-primary {
+		background-image: linear-gradient(141deg, black 0%, rgb(35, 59, 59) 50%, black 100%);
+	}
 }
